[package]
name = "ekonomi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.21"
lexical = "6.1.1"

[dependencies.lexical-core]
features=["write-integers", "write-floats", "parse-integers", "parse-floats", "format"]
